v1.10: Spring Boot 4.0.6 + Data Export/Import + Docker Noble Pin (#121)
* test(73): persist human verification items as UAT

* test(73): auto-UAT — 2/2 automatable items passed, 1 deferred to Phase 75

* docs(phase-73): complete phase execution

* docs(phase-73): evolve PROJECT.md after phase completion

* docs(74): capture phase context

* docs(state): record phase 74 context session

* docs(74): research + validation strategy

* docs(74): UI design contract

Translate locked CONTEXT D-01..D-25 decisions into 6-dimension UI design
contract for Backup Import (preview + confirm + landing upload form):
spacing/typography/color tokens from admin.css with file:line citations,
component inventory mapped to existing classes (zero new CSS), locked
English copywriting per D-02, three-layer destructive-action defence,
WCAG AA contrast verification, keyboard tab order, and per-page layout
skeletons.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* docs(74): outline + 10 PLAN.md files (chunked)

* docs(74): revision pass 1 — align Reason enum + LimitedInputStream + Cancel POST + field-error selector

* docs(74): revision pass 2 — Plan 04 LongConsumer onClose alignment

* docs(74): planning complete — D-01/D-22 citations + STATE.md (10 plans, 3 waves)

* feat(74-02): add BackupArchiveException + BackupImportLimits primitives

- BackupArchiveException with 8-value Reason enum (PATH_TRAVERSAL through NOT_A_ZIP)
- BackupImportLimits constants: 50 MB per entry, 500 MB total, 50k entries
- Unit tests: BackupArchiveExceptionTest (2 methods) + BackupImportLimitsTest (3 methods)

* feat(74): raise multipart limits to 100 MB and add backup staging-dir

- Replace spring.servlet.multipart.max-file-size: 10MB → 100MB
- Replace spring.servlet.multipart.max-request-size: 10MB → 100MB
- Add server.tomcat.max-http-form-post-size: 104857600 (100 MiB)
- Add server.tomcat.max-swallow-size: 104857600 (100 MiB)
- Add app.backup.staging-dir: data/${spring.profiles.active}/bac